# deriv8-no-deps

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deriv8/: __init__.py  __main__.py  model.py
deriv8/activation/: __init__.py
deriv8/activation_functions/: relu.py  sigmoid.py  softmax.py
deriv8/datasets/: __init__.py  mnist.py  utils.py
deriv8/loss_functions/: multinomial_logistic.py
deriv8/matrix2d/: __init__.py
results/: all-data--2-hidden-layers-32-units--lr1-e1--20-epochs--batch-500--regularization-1e-2.txt  all-data--2-hidden-layers-32-units--lr3-e2--20-epochs--batch-500--no-regularization--no-momentum.txt
tests/: test_activation.py  test_matrix2d.py
tests/loss_functions/: test_multinomial_logistic.py
